--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,8 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'ChiYu Code Journey'
+theme = 'github.com/kdevo/osprey-delight/v5'
+
+[module]
+    [[module.imports]]
+        path = 'github.com/kdevo/osprey-delight/v5'
