Update baseURL and htmltest config

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://eric861129.github.io/MyBlob/'
 languageCode = 'en-us'
 title = 'ChiYu Code Journey'
 theme = 'github.com/kdevo/osprey-delight/v5'
