--- a/hugo.toml
+++ b/hugo.toml
@@ -12,6 +12,12 @@ paginate = 5
   description = "歡迎來到 ChiYu 的程式旅程部落格"
   [params.author]
     name = "ChiYu"
+  [params.giscus]
+    enable = true
+    repo = "yourname/yourrepo"
+    repoId = ""
+    category = "Comments"
+    categoryId = ""
   # [params.logo]
   #   logo__png = "images/logo.png"
   #   logo_dark__png = "images/logo-dark.png"
