--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,6 +15,13 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '1.22'
+      - name: Cache Hugo modules
+        uses: actions/cache@v4
+        with:
+          path: ~/.hugo_cache
+          key: ${{ runner.os }}-hugo-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-hugo-
       - uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.123.7'
