--- a/hugo.toml
+++ b/hugo.toml
@@ -4,6 +4,26 @@ title = 'ChiYu Code Journey'
 theme = 'github.com/kdevo/osprey-delight/v5'
 paginate = 5
 
+[taxonomies]
+  tag = "tags"
+  category = "categories"
+
+[related]
+  threshold = 80
+  includeNewer = true
+  toLower = false
+
+  [[related.indices]]
+    name = "tags"
+    weight = 100
+  [[related.indices]]
+    name = "categories"
+    weight = 80
+  [[related.indices]]
+    name = "date"
+    weight = 10
+    pattern = "2006"
+
 [module]
     [[module.imports]]
         path = 'github.com/kdevo/osprey-delight/v5'
