Update giscus config

--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -1,5 +1,6 @@
-CheckExternal: true
+CheckExternal: false
 IgnoreInternalEmptyHash: true
 IgnoreEmptyHref: true
 IgnoreURLs:
   - /MyBlob/.*
+  - /pagefind/.*
