--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = 'https://eric861129.github.io/MyBlob/'
 languageCode = 'zh-TW'
 title = 'ChiYu Code Journey'
-theme = 'github.com/kdevo/osprey-delight/v5'
+# theme = 'github.com/kdevo/osprey-delight/v5'
 paginate = 5
 
 [taxonomies]
@@ -24,9 +24,10 @@ paginate = 5
     weight = 10
     pattern = "2006"
 
-[module]
-    [[module.imports]]
-        path = 'github.com/kdevo/osprey-delight/v5'
+
+# [module]
+#     [[module.imports]]
+#         path = 'github.com/kdevo/osprey-delight/v5'
 
 [params]
   description = "歡迎來到 ChiYu 的程式旅程部落格"
