feat: add social links

--- a/hugo.toml
+++ b/hugo.toml
@@ -53,6 +53,15 @@ paginate = 5
   #   logo_small__png = "images/logo-small.png"
   #   logo_small_dark__png = "images/logo-small-dark.png"
 
+  # --- ↓↓↓ 新增此區塊來放置社群連結 ↓↓↓ ---
+  [params.social]
+    GitHub = "https://github.com/eric861129"
+    LinkedIn = "https://www.linkedin.com/in/eric861129"
+    Threads = "https://www.threads.net/@eric861129"
+    Facebook = "https://www.facebook.com/eric861129"
+    CakeResume = "https://www.cakeresume.com/eric861129"
+  # --- ↑↑↑ 新增此區塊來放置社群連結 ↑↑↑ ---
+
 [menu]
   [[menu.main]]
     name = '首頁'
