--- a/hugo.toml
+++ b/hugo.toml
@@ -81,3 +81,13 @@ paginate = 5
     startLevel = 2
     endLevel = 4
     ordered = false
+
+    # 請將這段設定加入到您的 hugo.toml 檔案中
+
+[permalinks]
+  day = "/:year/:month/:day/"
+
+# 同時，請再次確認或加入 disableKinds 設定，
+# 確保 "day" 沒有被包含在裡面。
+# 如果沒有這行就不用加，如果有，請確保是類似下面的樣子：
+# disableKinds = ["taxonomy", "term"]
