--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -2,5 +2,5 @@ CheckExternal: false
 IgnoreInternalEmptyHash: true
 IgnoreEmptyHref: true
 IgnoreURLs:
-  - /MyBlob/.*
+  - /ChiYu-Blob/.*
   - /pagefind/.*
