--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,9 +19,14 @@ jobs:
           hugo-version: '0.123.7'
           extended: true
 
-      # --- ↓↓↓ 關鍵修改 (1/2): 在建置指令中加入 baseURL ---
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+      - name: Install dependencies
+        run: npm ci
       - name: Build site
-        run: hugo --minify --gc --baseURL "/ChiYu-Blob/"
+        run: hugo --minify --gc
 
       # --- ↓↓↓ 關鍵修改 (2/2): 修正 Pagefind 的 deprecated 選項 ---
       - name: Build Pagefind search index
