--- a/hugo.toml
+++ b/hugo.toml
@@ -63,7 +63,7 @@ buildFuture = true
     GitHub = "https://github.com/eric861129"
     LinkedIn = "https://www.linkedin.com/in/chiyu-huang/"
     Threads = "https://www.threads.com/@chiyuisme"
-    CakeResume = "https://www.cake.me/me/iamhandsomeboy1129"
+    CakeResume = "https://www.cake.me/me/ChiYuisme"
     iThome = "https://ithelp.ithome.com.tw/users/20132971/ironman/8253"
   # --- ↑↑↑ 新增此區塊來放置社群連結 ↑↑↑ ---
 
